prometheus-operator/ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.linuxba.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
