prometheus-operator/ingress/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.linuxba.com
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
